--- a/johns-hopkins-web-dev/assignment-1.html
+++ b/johns-hopkins-web-dev/assignment-1.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
   <title>Assignment - 1</title>
   <link rel="stylesheet" type="text/css" href="css/assignment-1.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
