--- a/johns-hopkins-web-dev/assignment-3.html
+++ b/johns-hopkins-web-dev/assignment-3.html
@@ -40,7 +40,7 @@
             <a href="#beef">Beef</a>
           </li>
           <li id="navHomeButton" class="visible-xs text-center">
-            <a href="#chicken">Sushi</a>
+            <a href="#sushi">Sushi</a>
           </li>
         </ul>
       </div>
