--- a/johns-hopkins-web-dev/assignment-3.html
+++ b/johns-hopkins-web-dev/assignment-3.html
@@ -19,8 +19,8 @@
   <nav id="header-nav" class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <div class="navbar-brand pull-left">
-          <a id="brand" class="pull-left" href="#"><span>Food,LLC</span></a>
+        <div class="navbar-brand">
+          <a href="#"><span>Food,LLC</span></a>
         </div>
         
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
