--- a/johns-hopkins-web-dev/assignment-3-1.html
+++ b/johns-hopkins-web-dev/assignment-3-1.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/assignment-3.css">
+  <link rel="stylesheet" href="css/assignment-3-1.css">
 
 </head>
 
